functinality of auth pages

--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -6,7 +6,7 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <form action="">
+    <form action="/auth/sign-up" method="POST">
         <label for="username">User</label>
         <input type="text" name="username" id="username">
 
@@ -14,7 +14,7 @@
         <input type="text" name="password" id="password">
 
         <label for="confrmPassword">Confirm Password </label>
-        <input type="text" name="confrmPassword" id="confrmPassword">
+        <input type="text" name="confrmPassword" id="confirmPassword">
 
         <button type="submit">Sign Up</button>
 
