--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -6,7 +6,7 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <form action="">
+    <form action="/auth/sign-in" method="POST">
         <label for="username">User</label>
         <input type="text" name="username" id="username">
 
