--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -11,7 +11,7 @@
         <input type="text" name="username" id="username">
 
         <label for="password">Password</label>
-        <input type="text" name="password" id="password">
+        <input type="password" name="password" id="password">
 
         <button type="submit">Sign In</button>
 
