--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -11,10 +11,10 @@
         <input type="text" name="username" id="username">
 
         <label for="password">Password</label>
-        <input type="text" name="password" id="password">
+        <input type="password" name="password" id="password">
 
-        <label for="confrmPassword">Confirm Password </label>
-        <input type="text" name="confrmPassword" id="confirmPassword">
+        <label for="confirmPassword">Confirm Password </label>
+        <input type="password" name="confirmPassword" id="confirmPassword">
 
         <button type="submit">Sign Up</button>
 
