--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,5 +10,12 @@
 
     <a href="/auth/sign-up">Sign Up</a>
     <a href="/auth/sign-in">Sign In</a>
+    <a href="/auth/sign-out">Sign Out</a>
+
+    <%if(user){%>
+        <h1>Welcome <%= user.username %></h1>
+    <%}else{%>
+        <h1>Welcome, Guest</h1>
+    <%}%>
 </body>
 </html>
