--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -6,6 +6,7 @@
     <title>Sign Up</title>
 </head>
 <body>
+    <%- include('../partials/_navbar.ejs') %>
     <form action="/auth/sign-in" method="POST">
         <label for="username">User</label>
         <input type="text" name="username" id="username">
