--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>Home Page!</title>
 </head>
 <body>
@@ -11,9 +12,9 @@
     <p>Buy or Rent Your Game and Play!</p>
 
     <%if(user){%>
-        <h1>Welcome <%= user.username %></h1>
+        <!-- <h1>Welcome <%= user.username %></h1> -->
     <%}else{%>
-        <h1>Welcome, Guest</h1>
+        <!-- <h1>Welcome, Guest</h1> -->
     <%}%>
 </body>
 </html>
