--- a/views/games/allgames.ejs
+++ b/views/games/allgames.ejs
@@ -7,15 +7,23 @@
     <title>All Games</title>
 </head>
 <body>
-    <h1>My Games</h1>
+    <%- include('../partials/_navbar.ejs') %>
+    <main class="main-content">
+        <h1>My Games</h1>
 
-    <ul>
-        <% games.forEach((game)=>{ %>
-            <a href="/users/<%= user._id %>/games/<%= game._id %>">
-                <li> <%= game.game %>  </li>
-            </a>
-            <!-- <li>Price: <%= game.price %> Purchase Type: <%= game.purchaseType %></li> -->
-          <% }) %>
-    </ul>
+        <ul class="games-list">
+            <% games.forEach((game)=>{ %>
+                <li class="game-item">
+                    <a href="/users/<%= user._id %>/games/<%= game._id %>" class="game-link">
+                        <div class="game-container">
+                            <p class="game-name"><%= game.game %></p>
+                            <p class="game-price">Price: <%= game.price %></p>
+                            <p class="game-purchase-type">Purchase Type: <%= game.purchaseType %></p>
+                        </div>
+                    </a>
+                </li>
+            <% }) %>
+        </ul>
+    </main>
 </body>
 </html>
