--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> <%= game.game %></title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <title><%= game.game %></title>
 </head>
 <body>
     <%- include('../partials/_navbar.ejs') %>
-    <h1> <%= game.game %> </h1>
-    <h2> Price : <%= game.price  %></h2>
-    <h2> Purchase Type: <%= game.purchaseType %></h2>
-
-    <form
-    action="/users/<%= user._id %>/games/<%= game._id %>?_method=DELETE"
-    method="POST"
-  >
-    <button type="submit">Delete this game</button>
-  </form>
+    <main class="show-page">
+        <h1><%= game.game %></h1>
+        <h2>Price: <%= game.price %></h2>
+        <h2>Purchase Type: <%= game.purchaseType %></h2>
+        <a href="/users/<%= user._id %>/games/<%= game._id %>/edit">Edit this Game</a>
+        <form action="/users/<%= user._id %>/games/<%= game._id %>?_method=DELETE" method="POST">
+            <button type="submit">Delete this Game</button>
+        </form>
+    </main>
 </body>
 </html>
