--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,13 +8,9 @@
 </head>
 <body>
     <%- include('./partials/_navbar.ejs') %>
-    <h1>RentNPlay </h1>
-    <p>Buy or Rent Your Game and Play!</p>
-
-    <%if(user){%>
-        <!-- <h1>Welcome <%= user.username %></h1> -->
-    <%}else{%>
-        <!-- <h1>Welcome, Guest</h1> -->
-    <%}%>
+    <div class="main-content">
+        <h1 id="rentnplay">RentNPlay</h1>
+        <p id="description">RentNPlay is an innovative platform dedicated to enhancing the gaming experience by providing a seamless service for renting and purchasing video games. The website is designed to cater to gamers of all ages and preferences, offering a wide range of titles across various genres and gaming consoles.</p>
+    </div>
 </body>
 </html>
