--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,6 +1,12 @@
-
 <nav>
-       <a href="/auth/sign-out">Sign Out</a>
-       <a href="/auth/sign-in">Sign In</a>
-       <a href="/auth/sign-up">Sign Up</a>
-</nav>
+    <div class="nav-content">
+      <div class="site-name">RentNPlay</div>
+      <div class="nav-links">
+        <a href="/auth/sign-out">Sign Out</a>
+        <a href="/auth/sign-in">Sign In</a>
+        <a href="/auth/sign-up">Sign Up</a>
+        <a href="">Profile</a>
+      </div>
+    </div>
+  </nav>
+  
