--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -8,17 +8,18 @@
 </head>
 <body>
     <%- include('../partials/_navbar.ejs') %>
-    <form action="/auth/sign-in" method="POST">
-        <label for="username">User</label>
-        <input type="text" name="username" id="username">
-
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password">
-
-        <button type="submit">Sign In</button>
-
-
-
+    <div class="form-container">
+        <form action="/auth/sign-in" method="POST" class="sign-form">
+            <label for="username">User</label>
+            <input type="text" name="username" id="username" required>
+    
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" required>
+    
+            <button type="submit">Sign In</button>
+        </form>
+    </div>
+    
     </form>
 </body>
 </html>
