profile update password

--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -5,7 +5,7 @@
         <a href="/auth/sign-out">Sign Out</a>
         <a href="/auth/sign-in">Sign In</a>
         <a href="/auth/sign-up">Sign Up</a>
-        <a href="">Profile</a>
+        <a href="/auth/profile">Profile</a>
       </div>
     </div>
   </nav>
