--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -22,6 +22,10 @@
             <label for="confirmNewPassword">Confirm New Password</label>
             <input type="password" name="confirmNewPassword" id="confirmNewPassword" required>
 
+
+            <label for="contact">Contact</label>
+            <input type="text" name="contact" id="contact" value ="<%= user.contact %>"required>
+
             <button type="submit">Update Password</button>
         </form>
     </div>
