--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -19,6 +19,10 @@
         <label for="confirmPassword">Confirm Password </label>
         <input type="password" name="confirmPassword" id="confirmPassword">
 
+
+        <label for="contact">Contact</label>
+        <input type="text" name="contact" id="contact" required>
+
         <button type="submit">Sign Up</button>
 
     </form>
