--- a/views/games/allgames.ejs
+++ b/views/games/allgames.ejs
@@ -18,6 +18,7 @@
                         <div class="game-container">
                             <p class="game-name"><%= game.game %></p>
                             <p class="game-price">Price: <%= game.price %></p>
+                            <p class="game-contact">Contact: <%= game.contact %></p>
                             <p class="game-purchase-type">Purchase Type: <%= game.purchaseType %></p>
                         </div>
                     </a>
