--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -13,13 +13,16 @@
         <div class="edit-form-container">
             <form action="/users/<%= user._id %>/games/<%= game._id %>?_method=PUT" method="POST" class="edit-form">
                 <label for="game">Game:</label>
-                <input type="text" name="game" id="game" value="<%= game.game %>">
+                <input type="text" name="game" id="game" value="<%= game.game %>" required>
                 
                 <label for="price">Price:</label>
-                <input type="text" name="price" id="price" value="<%= game.price %>">
+                <input type="text" name="price" id="price" value="<%= game.price %>" required>
+
+                <label for="contact">Contact:</label>
+                <input type="text" name="contact" id="contact" value="<%= game.contact %>" required>
                 
                 <label for="purchaseType">Purchase Type:</label>
-                <select id="purchaseType" name="purchaseType">
+                <select id="purchaseType" name="purchaseType" required>
                     <option value="sell" <%= game.purchaseType === 'sell' ? 'selected' : '' %>>For Sale</option>
                     <option value="rent" <%= game.purchaseType === 'rent' ? 'selected' : '' %>>For Rent</option>
                 </select>
