--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -25,6 +25,7 @@
                             <p class="game-name"><%= game.game %></p>
                             <p class="game-price">Price: <%= game.price %></p>
                             <p class="game-purchase-type">Purchase Type: <%= game.purchaseType %></p>
+                            <p class="game-contact">Contact: <%= game.contact %></p>
                         </div>
                     </li>
                     <%  })%> 
