--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -12,13 +12,16 @@
     <h1>Add New Game</h1>
     <form class="add-game-form" action="/users/<%= user._id %>/games" method="POST">
         <label for="game">Game:</label>
-        <input type="text" name="game" id="game">
+        <input type="text" name="game" id="game" required>
         
         <label for="price">Price:</label>
-        <input type="text" name="price" id="price">
+        <input type="text" name="price" id="price" required>
+
+        <label for="contact">Contact:</label>
+        <input type="text" name="contact" id="contact" required>
         
         <label for="purchaseType">Purchase Type:</label>
-        <select id="purchaseType" name="purchaseType">
+        <select id="purchaseType" name="purchaseType" required>
           <option value="sell">For Sale</option>
           <option value="rent">For Rent</option>
         </select>
