--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -11,7 +11,10 @@
     <main class="show-page">
         <h1><%= game.game %></h1>
         <h2>Price: <%= game.price %></h2>
+        <h2>Contact: <%= game.contact %></h2>
         <h2>Purchase Type: <%= game.purchaseType %></h2>
+        
+
         <a href="/users/<%= user._id %>/games/<%= game._id %>/edit">Edit this Game</a>
         <form action="/users/<%= user._id %>/games/<%= game._id %>?_method=DELETE" method="POST">
             <button type="submit">Delete this Game</button>
