--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -22,8 +22,8 @@
         
         <label for="purchaseType">Purchase Type:</label>
         <select id="purchaseType" name="purchaseType" required>
-          <option value="sell">For Sale</option>
-          <option value="rent">For Rent</option>
+          <option value="SELL">For Sale</option>
+          <option value="RENT">For Rent</option>
         </select>
         <button type="submit">Add Game</button>
     </form>
